<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#E0E0E0">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_food_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.mingf.imagenote.FoodFormActivity"
        android:background="#E0E0E0">

        <LinearLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="70sp"
                android:layout_height="120sp"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:id="@+id/foodImageView"
                android:layout_weight="1"/>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:hint="@string/name"
                    android:ems="10"
                    android:id="@+id/editTextFoodName" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:hint="@string/short_description"
                    android:ems="10"
                    android:id="@+id/editTextFoodDesc" />
            </TableLayout>
        </LinearLayout>

        <TableLayout android:layout_height="wrap_content"
            android:layout_width="match_parent"
            >

            <TableRow>
                <TextView
                    android:text="@string/url"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    style="@style/FormCustomStyle"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textUri"
                    android:ems="10"
                    android:id="@+id/editTextUrl" />

            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/keywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewKeywords"
                    style="@style/FormCustomStyle"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="text|textAutoComplete"
                    android:ems="10"
                    android:id="@+id/editTextKeywords" />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/date_obtained"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewDate"
                    style="@style/FormCustomStyle"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="setDate"
                    android:id="@+id/buttonDateView"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/share_image"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewShare"
                    style="@style/FormCustomStyle"/>

                <ToggleButton
                    android:text="@string/yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/toggleButtonShare"
                    android:textOn="@string/yes"
                    android:textOff="@string/no"/>

            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/owned_by_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewEmail"
                    style="@style/FormCustomStyle"/>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:ems="10"
                    android:id="@+id/editTextEmail" />

            </TableRow>

            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <TextView
                    android:text="@string/rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewRate"
                    style="@style/FormCustomStyle"/>

                <RatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/ratingBar"
                    android:numStars="5"
                    android:scaleX="0.5"
                    android:scaleY="0.5"
                    />
            </TableRow>
        </TableLayout>

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSubmit"
            android:layout_gravity="center"/>

    </LinearLayout>
</ScrollView>

